Bug fixes and spacing fixes

--- a/scss/sections/key-ingredient.scss
+++ b/scss/sections/key-ingredient.scss
@@ -222,13 +222,16 @@
 
 
 .single_key_ingredients_main .card-carousel__carousel-btn[disabled],
-.bundle_key_ingredients_main .card-carousel__carousel-btn[disabled], 
-.single_key_ingredients_main .card-carousel__carousel-btn,
-.bundle_key_ingredients_main .card-carousel__carousel-btn {
+.bundle_key_ingredients_main .card-carousel__carousel-btn[disabled] {
     background-color: rgba(217, 217, 217, 1);
-    color: white !important;
+    color: white;
     opacity: 1;
     pointer-events: none;
+}
+
+.single_key_ingredients_main .card-carousel__carousel-btn,
+.bundle_key_ingredients_main .card-carousel__carousel-btn{
+    color: white !important;
 }
 
 
