--- a/scss/sections/landing-page-testimonials.scss
+++ b/scss/sections/landing-page-testimonials.scss
@@ -50,6 +50,10 @@
     margin: 0 auto;
     @media(--sm){
         padding-bottom: 70px;
+        max-width: 860px;
+    }
+    @media(--md-large){
+        max-width: 1100px;
     }
 }
 // :--prev {
